More detail on Fine Arts majors

--- a/kernel152402a73b.ipynb
+++ b/kernel152402a73b.ipynb
@@ -1048,7 +1048,7 @@
     "_uuid": "451981d614904fa37608ac4ff58c2ac3ba3dd547"
    },
    "source": [
-    "CS majors are by far the most prevalent. Let's see where they are from."
+    "CS majors are by far the most prevalent. Let's see where they are from. (Also worth noting here there are 87 Fine Arts majors. We'll use this later.)"
    ]
   },
   {
@@ -1095,16 +1095,16 @@
        "Singapore                                                 64\n",
        "Greece                                                    57\n",
        "Colombia                                                  53\n",
-       "Belgium                                                   52\n",
        "Romania                                                   52\n",
-       "Switzerland                                               49\n",
+       "Belgium                                                   52\n",
        "Argentina                                                 49\n",
+       "Switzerland                                               49\n",
        "Sweden                                                    45\n",
        "Tunisia                                                   42\n",
        "Malaysia                                                  42\n",
+       "Morocco                                                   40\n",
        "Belarus                                                   40\n",
        "Peru                                                      40\n",
-       "Morocco                                                   40\n",
        "Ireland                                                   36\n",
        "Kenya                                                     34\n",
        "South Africa                                              33\n",
@@ -1114,10 +1114,10 @@
        "Denmark                                                   30\n",
        "Norway                                                    29\n",
        "Czech Republic                                            27\n",
-       "Finland                                                   25\n",
        "Republic of Korea                                         25\n",
-       "Austria                                                   24\n",
+       "Finland                                                   25\n",
        "Chile                                                     24\n",
+       "Austria                                                   24\n",
        "Philippines                                               19\n",
        "New Zealand                                               18\n",
        "Name: Q3, dtype: int64"
@@ -1535,6 +1535,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "_uuid": "bfad55650263a20975b682ac8dbb024b4db8d1fc"
+   },
+   "source": [
+    "As for Fine Arts majors, our highest earners, we saw earlier they make up 87 of our 23859 entries which is probably reason enough to dismiss it. But let's look at one other thing."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {
@@ -1624,7 +1633,7 @@
     "_uuid": "5b1cff5c6d590e353afe09774d97ade2ffaf88ec"
    },
    "source": [
-    "So a lot of folks in these majors have Masters degrees and since we only have undergraduate majors available we're limited in what we can say.  Another factor could be job role  but we are going to consider this for the entire dataset next."
+    "Of our 87 Fine Arts majors only 21 of them definitely have a Bachelor's degree and no graduate degree. So how much their undergraduate major was a factor is even harder to determine. In fact a lot of folks in these majors have Masters degrees and since we only have undergraduate majors available we're limited in what we can say (as I'll discuss in the blog this can be a good thing).  Another factor could be skills but we are going to consider this for the entire dataset next."
    ]
   },
   {
@@ -1877,7 +1886,7 @@
     "_uuid": "5224d695cfcbabf350c4f4c3c44fc1c4edfab697"
    },
    "source": [
-    "This is a fascinating graph because it seems to suggest a pattern but what exactly that pattern is is uncertain. My best theory is that Yes, most ML models are \"black boxes\" is a mixture of people working with less inpretable models(and making higher salaries) and people who are less knowledgable (and making lower salaries).  We'll need to define a couple of functions to help us explore this data."
+    "This is a fascinating graph because it seems to suggest a pattern but what exactly that pattern is is uncertain. My best theory is that the \"Yes, most ML models are black boxes\" group is a mixture of people working with less inpretable models(and making higher salaries) and people who are less knowledgable (and making lower salaries).  We'll need to define a couple of functions to help us explore this data."
    ]
   },
   {
